--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "memlayout.h": "c"
+        "memlayout.h": "c",
+        "fs.h": "c",
+        "proc.h": "c"
     }
 }
