--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
+        "*.S": "arm",
         "memlayout.h": "c",
         "fs.h": "c",
         "proc.h": "c",
@@ -9,6 +10,7 @@
         "types.h": "c",
         "stat.h": "c",
         "buf.h": "c",
-        "file.h": "c"
+        "file.h": "c",
+        "param.h": "c"
     }
 }
