--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "buf.h": "c",
         "file.h": "c",
         "param.h": "c",
-        "user.h": "c"
+        "user.h": "c",
+        "struct_stat.h": "c"
     }
 }
