--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "name": "xv6debug",
             "type": "cppdbg",
             "request": "launch",
-            "stopAtEntry": false,
+            "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
             "program": "${workspaceFolder}/kernel/kernel",
             "miDebuggerPath": "/usr/bin/gdb-multiarch",
