--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,10 @@
         "file.h": "c",
         "param.h": "c",
         "user.h": "c",
-        "struct_stat.h": "c"
+        "struct_stat.h": "c",
+        "stdarg.h": "c",
+        "cmath": "c",
+        "*.tcc": "c",
+        "riscv.h": "c"
     }
 }
