--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "*.tcc": "c",
         "riscv.h": "c",
         "fcntl.h": "c",
-        "cstdlib": "c"
+        "cstdlib": "c",
+        "spinlock.h": "c"
     }
 }
